Fix Mobile-View Menu, now visible again

--- a/app/resources/public/css/site.css
+++ b/app/resources/public/css/site.css
@@ -110,11 +110,12 @@ a.button {
     position: absolute;
 }
 
-.menu-item li {
+.menuitem {
+    z-index: 2;
     position: relative;
 }
 
-.menu-item a {
+.menuitem a {
     display:block;
     width: 100%;
     height: 50px;
